tests-integration/tests/roundtrip/invalid/semantic/divide_by_zero/input.essence
find x: int(5..10)
such that x/0 = 3